# OEaSP

./: .gitignore  Курсовая ОСиСП.docx
5/Lab1/: Lab1.sln  Lab1.vcxproj
5/Lab2/: Lab2.docx  Lab2.vcxproj.filters
5/Lab3/: Lab3.docx
5/Lab5/: Lab5.cpp  Lab5.rc  Lab5.sln  Lab5.vcxproj  Lab5.vcxproj.filters
5/Lab6/: Lab6.cpp  Lab6.docx  Lab6.rc  Lab6.vcxproj  Lab6.vcxproj.filters
5/Lab7/: ChatMessage.h  Client.cpp  Room.h
6/Lab1/: script.sh  Отчет по лабораторной работе №1.docx
6/Lab2/: script.sh  Отчет по лабораторной работе №2.docx
6/Lab3/: Makefile  main.c  process_utils.c  process_utils.h  program  Отчет по лабораторной работе №3.docx
6/Lab4/: Отчет по лабораторной работе №4.docx
6/Lab5/: Makefile  main.c  multithreaded_sort  Отчет по лабораторной работе №5.docx
6/Lab6/: CMakeLists.txt  Server.cpp  Session.h  Отчёт по лабораторной работе №6.docx
Lab1/: Lab1.cpp  Lab1.docx
Lab2/: Lab2.cpp  Lab2.docx  Lab2.sln  Lab2.vcxproj  log.txt
Lab3/: Lab3.docx
Lab4/: Lab4.cpp  Lab4.docx  Lab4.sln  Lab4.vcxproj  Lab4.vcxproj.filters
Lab5/: Lab5.cpp  Lab5.docx
Lab6/: Lab6.docx  Lab6.sln
Lab7/: CMakeLists.txt  Lab7.docx  User.h
Lab8/: Lab8.docx
